Alignment fix for external org layout

--- a/app/assets/stylesheets/frontend/views/_organisations.scss
+++ b/app/assets/stylesheets/frontend/views/_organisations.scss
@@ -643,6 +643,9 @@
     .block-2 {
       width: 66%;
       float: right;
+      .inner-block {
+        padding-left: $gutter-one-sixth;
+      }
     }
     .block-3 {
       width: 33%;
